test/bad/sec_load_addr.subst
{"functions":[{"paramSecrecy":[false],"returnSecrecy":[false],"trusted":false}],"globalsOffset":80,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":36}
{"functions":[{"paramSecrecy":[false],"returnSecrecy":[false],"trusted":false}],"globalsOffset":80,"globalsSecrecy":[],"memories":[{"imported":true,"secret":true}],"memoriesOffset":36} 